added voiceops.com case study

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
           <h2 class="section_title">Recent Work</h2>
           <div class="wrapper clearfix">
               <div class="two-col">
-                  <a href="ruff-news">
+                  <a href="voiceops">
                       <div class="work-container w0"></div>
                   </a>
               </div>
               <div class="two-col">
-                  <p class="work-container_title">Ruff News</p>
-                  <p class="work-container_description">The world's #1 canine news source</p>
-                  <a href="ruff-news/" class="button work-container_button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
+                  <p class="work-container_title">VoiceOps.com</p>
+                  <p class="work-container_description">Marketing site for a voice data analytics startup</p>
+                  <a href="voiceops/" class="button work-container_button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
               </div>
           </div>
           <div class="wrapper clearfix">
@@ -119,7 +119,7 @@
     <section id="contact" class="wrapper contact">
     <div class="container">
       <h2 class="section_title">Hire Me!</h2>
-      <p>I love to work with great teams and build world-class digital products. I'm currently looking for remote work. If you'd like to get in touch, send me an email at <a class="text-highlight" href="mailto:oldskoolduck@gmail.com">oldskoolduck@gmail.com</a></p>
+      <p>I love to work with great teams and build world-class digital products.<br/> I'm currently looking for remote work. If you'd like to get in touch, send me an email at <a class="text-highlight" href="mailto:oldskoolduck@gmail.com">oldskoolduck@gmail.com</a></p>
     </div>
     </section>
 
