--- a/interactive_venue_maps/index.html
+++ b/interactive_venue_maps/index.html
@@ -125,8 +125,8 @@
         </a>
       </div>
       <div class="button-secondary previous">
-        <a href="../ruff-news">
-          <p><i class="material-icons">keyboard_arrow_left</i>Previous: Ruff News</p>
+        <a href="../voiceops">
+          <p><i class="material-icons">keyboard_arrow_left</i>Previous: VoiceOps.com</p>
         </a>
       </div>
     </div>
