--- a/voiceops/index.html
+++ b/voiceops/index.html
@@ -25,32 +25,62 @@
   <div id="uno" class="wrapper uno">
     <div class="container project_header">
       <div class="two-col">
-        <h1 class="project_title">Ruff News</h1>
+        <h1 class="project_title">VoiceOps.com</h1>
         <p class="text-bold">Goals:</p>
-        <p>Ruff News is a passion project of mine that I contribute to on a daily basis. It's a satirical news site for canine lovers</p>
+        <p>Create a simple marketing site that promotes signups and piques interest in the product</p>
         <br/>
         <p class="text-bold">My Role:</p>
-        <p>HTML &amp; CSS, UI/UX design, content writing, WordPress</p>
+        <p>UI/UX design, HTML &amp; CSS/SCSS, copywriting</p>
         <br/>
         <br/>
-        <a href="https://ruffnews.net" target="_blank" class="button">See live site <i class="material-icons">launch</i></a>
+        <a href="https://voiceops.com" target="_blank" class="button">See live site <i class="material-icons">launch</i></a>
       </div>
       <div class="two-col">
-        <img src="../img/ruffnews-top.jpg" alt="ruffnews"/>
+        <img class="drop-style" src="../img/voiceopssite-top.jpg" alt="ruffnews"/>
       </div>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
-      <h2>Planning, creating, and strategizing</h2>
-      <p>When I began Ruff News, I made one clear goal: create everything from scratch. This way, I would grow my skillset and gain experience launching a content/blog site I built myself. I built the site in pure HTML and CSS at first before migrating it to WordPress. I learned and developed my skills in SCSS, jQuery, semantic HTML, grid systems, content writing, graphic design, and more. I continue to learn and contribute to the site on a daily basis, trying out new features and expanding the functionality.</p>
+      <h2>Project planning and strategy</h2>
+      <p>I was given the responsibility of both design and development for the voiceops.com redesign. Being the only designer in the company, I had to plan and conduct the whole process in a timely/efficient manner, being careful to delegate tasks and spend my time wisely. I began by researching best implementation practices for the devices we we're targeting, as well as identifying pain points in the current design and how we could increase email signups.</p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
-      <img class="drop-style" src="../img/ruffnews-story.png" alt="mapsketch"/>
+      <img class="drop-style" src="../img/voiceopssite-comparison.png" alt="voiceops steps"/>
+      <p class="img-caption">New Voiceops.com(left) vs. old(right)</p>
     </div>
   </div>
+  <div class="wrapper work">
+    <div class="container">
+      <h2>Communicating value</h2>
+      <p>The weakest aspect of the previous design was it's value proposition and content. The site's hero section was vague, unfriendly, and had a weak call-to-action. The content was chunked into many different sections that all gave confusing details on what the product does and it's value, like 'Remove the guesswork, and elevate your team'. I worked directly with the founders and marketing people in the company to establish what the real value was and how we could communicate it in the simplest manner. We arrived at the new hero section(above) and 3 short paragraphs with titles and simplified product screenshots(below), after many different copy iterations.</p>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
+      <img class="drop-style" src="../img/voiceopssite-steps.jpg" alt="voiceops steps"/>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
+      <h2>Visual overhaul</h2>
+      <p>Not only did the previous product not communicate what the product was well, but it also had an entirely different visual feel to it than the VoiceOps app. I made it a goal for the new voiceops.com aesthetic to strongly reflect the app's look and feel. I stripped VoiceOps identity down to it's bare basics and put an emphasis on simplicity and minimalism. The VoiceOps app mirrors this, with a big emphasis on making an intimidating set of content look and feel simple.</p>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
+      <img class="drop-style" src="../img/voiceopssite-middle.jpg" alt="voiceops steps"/>
+    </div>
+  </div>
+  <div class="wrapper work">
+    <div class="container">
+      <img class="drop-style" src="../img/voiceopssite-testimonials.jpg" alt="voiceops steps"/>
+      <p class="img-caption">Testimonial section and footer</p>
+    </div>
+  </div>
+
 
   <!--Previous/Next-->
   <div class="wrapper work">
