visual updates, new logo, flexbox implementation

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Graham Grimaldi | Digital UI/UX Designer &amp; Developer</title>
+<title>Graham Grimaldi | Product Designer &amp; Developer</title>
 <link rel="shortcut icon" href="img/logo.png" type="image/x-icon"/>
-<link href="https://fonts.googleapis.com/css?family=Material+Icons|Lato:400,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Material+Icons|Nunito:400,900" rel="stylesheet">
 <link href="css/styles.css" rel="stylesheet" type="text/css">
 <meta name="description" content="Graham Grimaldi is digital designer and developer in Connecticut who specializes in UI/UX design and front-end development">
 <meta name="keywords" content="Graham Grimaldi">
@@ -17,15 +17,14 @@
       <div class="container">
         <a href="../">
         <div class="nav_logo"><img src="img/logo.svg"></div>
-        <p class="nav_name">Graham Grimaldi</p>
         </a>
       </div>
   </nav>
     <!--Intro-->
     <header id="uno" class="wrapper intro">
         <div class="container">
-          <h1>
-            <span class="text-highlight">Digital designer</span> &amp; <span class="text-highlight">developer</span> <br/>with a passion for crafting <br/> human experiences.
+          <h1> Hi, I'm Graham Grimaldi, a
+            <span class="text-highlight">product designer</span> with a passion for crafting human experiences.
           </h1>
         </div>
     </header>
@@ -33,52 +32,52 @@
     <section id="work" class="wrapper work">
         <div class="container">
           <h2 class="section_title">Recent Work</h2>
-          <div class="wrapper clearfix">
-              <div class="two-col">
+          <div class="row-flex">
+              <div class="col-flex-2">
                   <a href="voiceops">
                       <div class="work-container w0"></div>
                   </a>
               </div>
-              <div class="two-col">
+              <div class="col-flex-2">
                   <p class="work-container_title">VoiceOps.com</p>
                   <p class="work-container_description">Marketing site for a voice data analytics startup</p>
-                  <a href="voiceops/" class="button work-container_button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
+                  <a href="voiceops/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
               </div>
           </div>
-          <div class="wrapper clearfix">
-              <div class="two-col">
+          <div class="row-flex">
+              <div class="col-flex-2">
                   <a href="interactive_venue_maps">
                       <div class="work-container w1"></div>
                   </a>
               </div>
-              <div class="two-col">
+              <div class="col-flex-2">
                   <p class="work-container_title">Interactive Venue Maps</p>
                   <p class="work-container_description">A responsive venue maps experience for ticketing websites</p>
-                  <a href="interactive_venue_maps/" class="button work-container_button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
+                  <a href="interactive_venue_maps/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
               </div>
           </div>
-          <div class="wrapper clearfix">
-              <div class="two-col">
+          <div class="row-flex">
+              <div class="col-flex-2">
                   <a href="point-of-sale">
                       <div class="work-container w2"></div>
                   </a>
               </div>
-              <div class="two-col">
+              <div class="col-flex-2">
                   <p class="work-container_title">Spotlight Point-of-Sale</p>
                   <p class="work-container_description">Flagship inventory management for brokers</p>
-                  <a href="point-of-sale/" class="button work-container_button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
+                  <a href="point-of-sale/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
               </div>
           </div>
-          <div class="wrapper clearfix">
-              <div class="two-col">
+          <div class="row-flex">
+              <div class="col-flex-2">
                   <a href="tn-portal">
                       <div class="work-container w3"></div>
                   </a>
               </div>
-              <div class="two-col">
+              <div class="col-flex-2">
                   <p class="work-container_title">TicketNetwork Portal</p>
                   <p class="work-container_description">Simple account management application</p>
-                  <a href="tn-portal/" class="button work-container_button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
+                  <a href="tn-portal/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
               </div>
           </div>
         </div>
@@ -87,11 +86,13 @@
     <section id="about" class="wrapper about">
     <div class="container">
       <h2 class="section_title">About Me</h2>
-      <div class="two-col">
-      <img src="img/aboutme.jpg" class="about_img" alt="graham"/>
-      </div>
-      <div class="two-col">
-      <p>I believe truly great design empowers human beings and can change the world. At an early age, I discovered my love of creating and building. Seeing the world as an object of design, I aim to better it through a user-centered process. I love to work closely with product teams in order to drive UI requirements from concept to release. I thrive on great communication, empathy, and passion amongst teams. </p>
+      <div class="row-flex">
+        <div class="col-flex-2">
+          <img src="img/aboutme.jpg" class="about_img" alt="graham"/>
+        </div>
+        <div class="col-flex-2">
+          <p>At an early age, I discovered my love of creating and building. Seeing the world as an object of design, I aim to better it through a user-centered process. I love to work closely with product teams in order to drive UI requirements from concept to release. I thrive on great communication, compassion, and drive amongst teams. In my free time, I run a Facebook and Instagram page for <a class="link" href="https://www.facebook.com/uxmemes" target="_blank">UX Design Memes</a> and tech humor, cook, enjoy the outdoors, and make <a class="link" href="https://soundcloud.com/graham-grimaldi" target="_blank">music</a>.</p>
+        </div>
       </div>
     </div>
     </section>
@@ -100,17 +101,19 @@
     <section id="toolbox" class="wrapper toolbox">
       <div class="container">
         <h2 class="section_title">In My Toolbox</h2>
-        <div class="three-col toolbox-square">
-          <div class="toolbox-icon wireframe"></div>
-          <p>UI/UX Design</p>
-        </div>
-        <div class="three-col toolbox-square">
-          <div class="toolbox-icon code"></div>
-          <p>HTML &amp; CSS</p>
-        </div>
-        <div class="three-col toolbox-square">
-          <div class="toolbox-icon thinking"></div>
-          <p>Creative Problem Solving</p>
+        <div class="row-flex">
+          <div class="col-flex-3 toolbox-square">
+            <div class="toolbox-icon wireframe"></div>
+            <p>UI/UX Design</p>
+          </div>
+          <div class="col-flex-3 toolbox-square">
+            <div class="toolbox-icon code"></div>
+            <p>HTML &amp; CSS</p>
+          </div>
+          <div class="col-flex-3 toolbox-square">
+            <div class="toolbox-icon thinking"></div>
+            <p>Creative Problem Solving</p>
+          </div>
         </div>
       </div>
     </section>
@@ -119,7 +122,7 @@
     <section id="contact" class="wrapper contact">
     <div class="container">
       <h2 class="section_title">Hire Me!</h2>
-      <p>I love to work with great teams and build world-class digital products.<br/> I'm currently looking for remote work. If you'd like to get in touch, send me an email at <a class="text-highlight" href="mailto:oldskoolduck@gmail.com">oldskoolduck@gmail.com</a></p>
+      <p>I love to work with great teams and build world-class digital products.<br/>If you'd like to get in touch, send me an email at <a class="link" href="mailto:oldskoolduck@gmail.com">oldskoolduck@gmail.com</a></p>
     </div>
     </section>
 
@@ -155,32 +158,27 @@
         <a href="https://twitter.com/oldskoolduck" target="_blank">Twitter</a>
       </li>
     </ul>
-    <ul class="sidebar_contact">
-      <li>
-        <a href="mailto:oldskoolduck@gmail.com"><i class="material-icons">email</i>Email Me</a>
-      </li>
-      <li>
-        <a href="../img/grahamgrimaldi-resume.pdf" download><i class="material-icons">get_app</i>Download Resume</a>
-      </li>
-    </ul>
+    <a class="button sidebar_button" href="../img/grahamgrimaldi-resume.pdf" download>Download Resume</a>
   </div>
 
   <!--Footer-->
-  <footer id="footer clearfix" class="wrapper footer">
+  <footer id="footer" class="wrapper footer">
     <div class="container">
-      <div class="three-col">
-        <p>
-          Made with <i class="heart-icon"></i> in <span id="year"></span>
-        </p>
-      </div>
-      <div class="three-col">
-        <div class="ghost-icon"></div>
-        <p class="tickle">Do not tickle!</p>
-      </div>
-      <div class="three-col">
-        <a id="scrolltop" class="button footer_button" href="#uno">
-          Back to Top <i class="material-icons">keyboard_arrow_up</i>
-        </a>
+      <div class="row-flex">
+        <div class="col-flex-3">
+          <p>
+            Made with <i class="heart-icon"></i> in <span id="year"></span>
+          </p>
+        </div>
+        <div class="col-flex-3">
+          <div class="ghost-icon"></div>
+          <p class="tickle">Do not tickle!</p>
+        </div>
+        <div class="col-flex-3">
+          <a id="scrolltop" class="button footer_button" href="#uno">
+            Back to Top <i class="material-icons">keyboard_arrow_up</i>
+          </a>
+        </div>
       </div>
     </div>
   </footer>
