--- a/interactive_venue_maps/index.html
+++ b/interactive_venue_maps/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Graham Grimaldi | Digital UI/UX Designer &amp; Developer</title>
 <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon"/>
-<link href="https://fonts.googleapis.com/css?family=Material+Icons|Lato:400,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Material+Icons|Nunito:400,900" rel="stylesheet">
 <link href="../css/styles.css" rel="stylesheet" type="text/css">
 <meta name="description" content="Graham Grimaldi is digital designer and developer in Connecticut who specializes in UI/UX design and front-end development">
 <meta name="keywords" content="Graham Grimaldi">
@@ -17,23 +17,24 @@
       <div class="container">
         <a href="../">
           <div class="nav_logo"><img src="../img/logo.svg"></div>
-          <p class="nav_name">Graham Grimaldi</p>
         </a>
       </div>
   </nav>
   <!--Case Study Section-->
   <div id="uno" class="wrapper uno">
     <div class="container project_header">
-      <div class="two-col">
-        <h1 class="project_title">Interactive <br/>Venue Maps</h1>
-        <p class="text-bold">Goals:</p>
-        <p>Create a responsive venue maps experience that meets customer needs, increases conversion, and can be used across a wide range of event ticketing sites</p>
-        <br/>
-        <p class="text-bold">My Role:</p>
-        <p>User interface design, user research, wireframing, prototyping</p>
-      </div>
-      <div class="two-col">
-        <img src="../img/map-iphone.png" alt="mobilemaps"/>
+      <div class="row-flex">
+        <div class="col-flex-2">
+          <h1 class="project_title">Interactive <br/>Venue Maps</h1>
+          <p class="text-bold">Goals:</p>
+          <p>Create a responsive venue maps experience that meets customer needs, increases conversion, and can be used across a wide range of event ticketing sites</p>
+          <br/>
+          <p class="text-bold">My Role:</p>
+          <p>User interface design, user research, wireframing, prototyping</p>
+        </div>
+        <div class="col-flex-2">
+          <img src="../img/map-iphone.png" alt="mobilemaps"/>
+        </div>
       </div>
     </div>
   </div>
@@ -85,11 +86,13 @@
   </div>
   <div class="wrapper work">
     <div class="container">
-      <div class="two-col">
-        <img class="drop-style" src="../img/maps-main.jpg" alt="mapsmobile"/>
-      </div>
-      <div class="two-col">
-        <img class="drop-style" src="../img/maps-interstitial.jpg" alt="interstitial"/>
+      <div class="row-flex">
+        <div class="col-flex-2">
+          <img class="drop-style" src="../img/maps-main.jpg" alt="mapsmobile"/>
+        </div>
+        <div class="col-flex-2">
+          <img class="drop-style" src="../img/maps-interstitial.jpg" alt="interstitial"/>
+        </div>
       </div>
     </div>
   </div>
@@ -101,11 +104,13 @@
   </div>
   <div class="wrapper work">
     <div class="container">
-      <div class="two-col">
-        <img class="drop-style" src="../img/maps-filters.jpg" alt="filters"/>
-      </div>
-      <div class="two-col">
-        <img class="drop-style" src="../img/maps-moredates.jpg" alt="moredates"/>
+      <div class="row-flex">
+        <div class="col-flex-2">
+          <img class="drop-style" src="../img/maps-filters.jpg" alt="filters"/>
+        </div>
+        <div class="col-flex-2">
+          <img class="drop-style" src="../img/maps-moredates.jpg" alt="moredates"/>
+        </div>
       </div>
     </div>
   </div>
@@ -142,57 +147,52 @@
   </div>
   <!--Mobile Sidebar-->
   <div class="sidebar sidebar-hidden">
-    <ul class="sidebar_nav">
-      <li>
-        <a class="nav-link" href="../#work">Recent Work</a>
-      </li>
-      <li>
-        <a class="nav-link" href="../#about">About Me</a>
-      </li>
-      <li>
-        <a class="nav-link" href="../#contact">Hire Me</a>
-      </li>
-    </ul>
-    <ul class="sidebar_social">
-      <li>
-        <a href="https://www.linkedin.com/in/graham-grimaldi-759412a4" target="_blank">LinkedIn</a>
-      </li>
-      <li>
-        <a href="https://dribbble.com/Oldskoolduck" target="_blank">Dribbble</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/oldskoolduck" target="_blank">Twitter</a>
-      </li>
-    </ul>
-    <ul class="sidebar_contact">
-      <li>
-        <a href="mailto:oldskoolduck@gmail.com"><i class="material-icons">email</i>Email Me</a>
-      </li>
-      <li>
-        <a href="../img/grahamgrimaldi-resume.pdf" download><i class="material-icons">get_app</i>Download Resume</a>
-      </li>
-    </ul>
-  </div>
+      <ul class="sidebar_nav">
+        <li>
+          <a id="worklink" class="nav-link" href="#work">Recent Work</a>
+        </li>
+        <li>
+          <a id="aboutlink" class="nav-link" href="#about">About Me</a>
+        </li>
+        <li>
+          <a id="contactlink" class="nav-link" href="#contact">Hire Me</a>
+        </li>
+      </ul>
+      <ul class="sidebar_social">
+        <li>
+          <a href="https://www.linkedin.com/in/graham-grimaldi-759412a4" target="_blank">LinkedIn</a>
+        </li>
+        <li>
+          <a href="https://dribbble.com/Oldskoolduck" target="_blank">Dribbble</a>
+        </li>
+        <li>
+          <a href="https://twitter.com/oldskoolduck" target="_blank">Twitter</a>
+        </li>
+      </ul>
+      <a class="button sidebar_button" href="../img/grahamgrimaldi-resume.pdf" download>Download Resume</a>
+    </div>
 
   <!--Footer-->
-  <footer id="footer clearfix" class="wrapper footer">
-    <div class="container">
-        <div class="three-col">
+  <footer id="footer" class="wrapper footer">
+      <div class="container">
+        <div class="row-flex">
+          <div class="col-flex-3">
             <p>
               Made with <i class="heart-icon"></i> in <span id="year"></span>
             </p>
-        </div>
-        <div class="three-col">
+          </div>
+          <div class="col-flex-3">
             <div class="ghost-icon"></div>
             <p class="tickle">Do not tickle!</p>
-        </div>
-        <div class="three-col">
+          </div>
+          <div class="col-flex-3">
             <a id="scrolltop" class="button footer_button" href="#uno">
               Back to Top <i class="material-icons">keyboard_arrow_up</i>
             </a>
+          </div>
         </div>
-    </div>
-  </footer>
+      </div>
+    </footer>
 </body>
 <script src="../js/main.min.js" type="text/javascript"></script>
 </html>
