--- a/tn-portal/index.html
+++ b/tn-portal/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Graham Grimaldi | User Experience Designer</title>
 <link rel="shortcut icon"href="../img/logo.png" type="image/x-icon"/>
-<link href="https://fonts.googleapis.com/css?family=Material+Icons|Lato:400,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Material+Icons|Nunito:400,900" rel="stylesheet">
 <link href="../css/styles.css" rel="stylesheet" type="text/css">
 <meta name="description" content="Graham Grimaldi is digital designer and developer in Connecticut who specializes in UI/UX design and front-end development">
 <meta name="keywords" content="Graham Grimaldi">
@@ -17,7 +17,6 @@
       <div class="container">
         <a href="../">
           <div class="nav_logo"><img src="../img/logo.svg"></div>
-          <p class="nav_name">Graham Grimaldi</p>
         </a>
       </div>
   </nav>
@@ -93,56 +92,51 @@
   </div>
   <!--Mobile Sidebar-->
   <div class="sidebar sidebar-hidden">
-    <ul class="sidebar_nav">
-      <li>
-        <a class="nav-link" href="../#work">Recent Work</a>
-      </li>
-      <li>
-        <a class="nav-link" href="../#about">About Me</a>
-      </li>
-      <li>
-        <a class="nav-link" href="../#contact">Hire Me</a>
-      </li>
-    </ul>
-    <ul class="sidebar_social">
-      <li>
-        <a href="https://www.linkedin.com/in/graham-grimaldi-759412a4" target="_blank">LinkedIn</a>
-      </li>
-      <li>
-        <a href="https://dribbble.com/Oldskoolduck" target="_blank">Dribbble</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/oldskoolduck" target="_blank">Twitter</a>
-      </li>
-    </ul>
-    <ul class="sidebar_contact">
-      <li>
-        <a href="mailto:oldskoolduck@gmail.com"><i class="material-icons">email</i>Email Me</a>
-      </li>
-      <li>
-        <a href="../img/grahamgrimaldi-resume.pdf" download><i class="material-icons">get_app</i>Download Resume</a>
-      </li>
-    </ul>
-  </div>
+      <ul class="sidebar_nav">
+        <li>
+          <a id="worklink" class="nav-link" href="#work">Recent Work</a>
+        </li>
+        <li>
+          <a id="aboutlink" class="nav-link" href="#about">About Me</a>
+        </li>
+        <li>
+          <a id="contactlink" class="nav-link" href="#contact">Hire Me</a>
+        </li>
+      </ul>
+      <ul class="sidebar_social">
+        <li>
+          <a href="https://www.linkedin.com/in/graham-grimaldi-759412a4" target="_blank">LinkedIn</a>
+        </li>
+        <li>
+          <a href="https://dribbble.com/Oldskoolduck" target="_blank">Dribbble</a>
+        </li>
+        <li>
+          <a href="https://twitter.com/oldskoolduck" target="_blank">Twitter</a>
+        </li>
+      </ul>
+      <a class="button sidebar_button" href="../img/grahamgrimaldi-resume.pdf" download>Download Resume</a>
+    </div>
   <!--Footer-->
-  <footer id="footer clearfix" class="wrapper footer">
-    <div class="container">
-        <div class="three-col">
+  <footer id="footer" class="wrapper footer">
+      <div class="container">
+        <div class="row-flex">
+          <div class="col-flex-3">
             <p>
               Made with <i class="heart-icon"></i> in <span id="year"></span>
             </p>
-        </div>
-        <div class="three-col">
+          </div>
+          <div class="col-flex-3">
             <div class="ghost-icon"></div>
             <p class="tickle">Do not tickle!</p>
-        </div>
-        <div class="three-col">
+          </div>
+          <div class="col-flex-3">
             <a id="scrolltop" class="button footer_button" href="#uno">
               Back to Top <i class="material-icons">keyboard_arrow_up</i>
             </a>
+          </div>
         </div>
-    </div>
-  </footer>
+      </div>
+    </footer>
 </body>
 <script src="../js/main.min.js" type="text/javascript"></script>
 </html>
