--- a/voiceops/index.html
+++ b/voiceops/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Graham Grimaldi | Digital UI/UX Designer &amp; Developer</title>
 <link rel="shortcut icon" href="../img/logo.png" type="image/x-icon"/>
-<link href="https://fonts.googleapis.com/css?family=Material+Icons|Lato:400,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Material+Icons|Nunito:400,900" rel="stylesheet">
 <link href="../css/styles.css" rel="stylesheet" type="text/css">
 <meta name="description" content="Graham Grimaldi is digital designer and developer in Connecticut who specializes in UI/UX design and front-end development">
 <meta name="keywords" content="Graham Grimaldi">
@@ -17,33 +17,34 @@
       <div class="container">
         <a href="../">
           <div class="nav_logo"><img src="../img/logo.svg"></div>
-          <p class="nav_name">Graham Grimaldi</p>
         </a>
       </div>
   </nav>
   <!--Case Study Section-->
   <div id="uno" class="wrapper uno">
     <div class="container project_header">
-      <div class="two-col">
-        <h1 class="project_title">VoiceOps.com</h1>
-        <p class="text-bold">Goals:</p>
-        <p>Create a simple marketing site that promotes signups and piques interest in the product</p>
-        <br/>
-        <p class="text-bold">My Role:</p>
-        <p>UI/UX design, HTML &amp; CSS/SCSS, copywriting</p>
-        <br/>
-        <br/>
-        <a href="https://voiceops.com" target="_blank" class="button">See live site <i class="material-icons">launch</i></a>
-      </div>
-      <div class="two-col">
-        <img class="drop-style" src="../img/voiceopssite-top.jpg" alt="ruffnews"/>
+      <div class="row-flex">
+        <div class="col-flex-2">
+          <h1 class="project_title">VoiceOps.com</h1>
+          <p class="text-bold">Goals:</p>
+          <p>Create a simple marketing site that promotes signups and piques interest in the product</p>
+          <br/>
+          <p class="text-bold">My Role:</p>
+          <p>UI/UX design, HTML &amp; CSS/SCSS, copywriting</p>
+          <br/>
+          <br/>
+          <a href="https://voiceops.com" target="_blank" class="button">See live site <i class="material-icons">launch</i></a>
+        </div>
+        <div class="col-flex-2">
+          <img class="drop-style" src="../img/voiceopssite-top.jpg" alt="ruffnews"/>
+        </div>
       </div>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
       <h2>Project planning and strategy</h2>
-      <p>I was given the responsibility of both design and development for the voiceops.com redesign. Being the only designer in the company, I had to plan and conduct the whole process in a timely/efficient manner, being careful to delegate tasks and spend my time wisely. I began by researching best implementation practices for the devices we we're targeting, as well as identifying pain points in the current design and how we could increase email signups.</p>
+      <p>I was given the responsibility of both design and development for the voiceops.com redesign. Being the only designer in the company, I had to plan and conduct the whole process in a timely/efficient manner, carefully delegating tasks and spending time wisely. I began by researching best implementation practices for the devices we we're targeting, as well as identifying pain points in the current design and how we could increase email signups.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -110,13 +111,13 @@
   <div class="sidebar sidebar-hidden">
     <ul class="sidebar_nav">
       <li>
-        <a class="nav-link" href="../#work">Recent Work</a>
+        <a id="worklink" class="nav-link" href="#work">Recent Work</a>
       </li>
       <li>
-        <a class="nav-link" href="../#about">About Me</a>
+        <a id="aboutlink" class="nav-link" href="#about">About Me</a>
       </li>
       <li>
-        <a class="nav-link" href="../#contact">Hire Me</a>
+        <a id="contactlink" class="nav-link" href="#contact">Hire Me</a>
       </li>
     </ul>
     <ul class="sidebar_social">
@@ -130,35 +131,30 @@
         <a href="https://twitter.com/oldskoolduck" target="_blank">Twitter</a>
       </li>
     </ul>
-    <ul class="sidebar_contact">
-      <li>
-        <a href="mailto:oldskoolduck@gmail.com"><i class="material-icons">email</i>Email Me</a>
-      </li>
-      <li>
-        <a href="../img/grahamgrimaldi-resume.pdf" download><i class="material-icons">get_app</i>Download Resume</a>
-      </li>
-    </ul>
+    <a class="button sidebar_button" href="../img/grahamgrimaldi-resume.pdf" download>Download Resume</a>
   </div>
 
   <!--Footer-->
-  <footer id="footer clearfix" class="wrapper footer">
-    <div class="container">
-        <div class="three-col">
+  <footer id="footer" class="wrapper footer">
+      <div class="container">
+        <div class="row-flex">
+          <div class="col-flex-3">
             <p>
               Made with <i class="heart-icon"></i> in <span id="year"></span>
             </p>
-        </div>
-        <div class="three-col">
+          </div>
+          <div class="col-flex-3">
             <div class="ghost-icon"></div>
             <p class="tickle">Do not tickle!</p>
-        </div>
-        <div class="three-col">
+          </div>
+          <div class="col-flex-3">
             <a id="scrolltop" class="button footer_button" href="#uno">
               Back to Top <i class="material-icons">keyboard_arrow_up</i>
             </a>
+          </div>
         </div>
-    </div>
-  </footer>
+      </div>
+    </footer>
 </body>
 <script src="../js/main.min.js" type="text/javascript"></script>
 </html>
