--- a/voiceops/index.html
+++ b/voiceops/index.html
@@ -15,9 +15,18 @@
   <!--Sticky Nav-->
   <nav class="wrapper">
       <div class="container">
-        <a href="../">
-          <div class="nav_logo"><img src="../img/logo.svg"></div>
-        </a>
+        <div class="row-flex">
+          <div class="col-flex-2">
+            <a href="../">
+            <div class="nav-logo"><img src="../img/logo.svg"></div>
+            </a>
+          </div>
+          <div class="col-flex-2 nav-link-container">
+            <a class="nav-link" href="../#work">Recent Work</a>
+            <a class="nav-link" href="../#about">About Me</a>
+            <a class="nav-link" href="../#contact">Hire Me</a>
+          </div>
+        </div>
       </div>
   </nav>
   <!--Case Study Section-->
@@ -109,30 +118,30 @@
   </div>
   <!--Mobile Sidebar-->
   <div class="sidebar sidebar-hidden">
-    <ul class="sidebar_nav">
-      <li>
-        <a id="worklink" class="nav-link" href="#work">Recent Work</a>
-      </li>
-      <li>
-        <a id="aboutlink" class="nav-link" href="#about">About Me</a>
-      </li>
-      <li>
-        <a id="contactlink" class="nav-link" href="#contact">Hire Me</a>
-      </li>
-    </ul>
-    <ul class="sidebar_social">
-      <li>
-        <a href="https://www.linkedin.com/in/graham-grimaldi-759412a4" target="_blank">LinkedIn</a>
-      </li>
-      <li>
-        <a href="https://dribbble.com/Oldskoolduck" target="_blank">Dribbble</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/oldskoolduck" target="_blank">Twitter</a>
-      </li>
-    </ul>
-    <a class="button sidebar_button" href="../img/grahamgrimaldi-resume.pdf" download>Download Resume</a>
-  </div>
+      <ul class="sidebar_nav">
+        <li>
+          <a class="sidebar-link" href="../#work">Recent Work</a>
+        </li>
+        <li>
+          <a class="sidebar-link" href="../#about">About Me</a>
+        </li>
+        <li>
+          <a class="sidebar-link" href="../#contact">Hire Me</a>
+        </li>
+      </ul>
+      <ul class="sidebar_social">
+        <li>
+          <a href="https://www.linkedin.com/in/graham-grimaldi-759412a4" target="_blank">LinkedIn</a>
+        </li>
+        <li>
+          <a href="https://dribbble.com/Oldskoolduck" target="_blank">Dribbble</a>
+        </li>
+        <li>
+          <a href="https://twitter.com/oldskoolduck" target="_blank">Twitter</a>
+        </li>
+      </ul>
+      <a class="button" href="../img/grahamgrimaldi-resume.pdf" download><i class="material-icons">cloud_download</i> Get My Resume</a>
+    </div>
 
   <!--Footer-->
   <footer id="footer" class="wrapper footer">
@@ -140,7 +149,7 @@
         <div class="row-flex">
           <div class="col-flex-3">
             <p>
-              Made with <i class="heart-icon"></i> in <span id="year"></span>
+              Made with <i class="heart-icon"></i> by Graham
             </p>
           </div>
           <div class="col-flex-3">
@@ -148,7 +157,7 @@
             <p class="tickle">Do not tickle!</p>
           </div>
           <div class="col-flex-3">
-            <a id="scrolltop" class="button footer_button" href="#uno">
+            <a id="scrolltop" class="button button-secondary footer_button" href="#uno">
               Back to Top <i class="material-icons">keyboard_arrow_up</i>
             </a>
           </div>
