added voiceops app case study and images

--- a/index.html
+++ b/index.html
@@ -42,9 +42,21 @@
         <div class="container">
           <h2 class="section_title">Recent Work</h2>
           <div class="row-flex">
+            <div class="col-flex-2">
+                <a href="voiceops">
+                    <div class="work-container w0"></div>
+                </a>
+            </div>
+            <div class="col-flex-2">
+                <p class="work-container_title">VoiceOps App</p>
+                <p class="work-container_description">Flagship product for voice data analytics startup</p>
+                <a href="voiceops-app/" class="button">See Case Study<i class="material-icons">keyboard_arrow_right</i></a>
+            </div>
+        </div>
+          <div class="row-flex">
               <div class="col-flex-2">
                   <a href="voiceops">
-                      <div class="work-container w0"></div>
+                      <div class="work-container w1"></div>
                   </a>
               </div>
               <div class="col-flex-2">
@@ -56,7 +68,7 @@
           <div class="row-flex">
               <div class="col-flex-2">
                   <a href="interactive_venue_maps">
-                      <div class="work-container w1"></div>
+                      <div class="work-container w2"></div>
                   </a>
               </div>
               <div class="col-flex-2">
@@ -68,7 +80,7 @@
           <div class="row-flex">
               <div class="col-flex-2">
                   <a href="point-of-sale">
-                      <div class="work-container w2"></div>
+                      <div class="work-container w3"></div>
                   </a>
               </div>
               <div class="col-flex-2">
@@ -80,7 +92,7 @@
           <div class="row-flex">
               <div class="col-flex-2">
                   <a href="tn-portal">
-                      <div class="work-container w3"></div>
+                      <div class="work-container w4"></div>
                   </a>
               </div>
               <div class="col-flex-2">
