added more voiceops app content and fixed nav alignment

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header id="uno" class="wrapper intro">
         <div class="container">
           <h1> Hi, I'm Graham Grimaldi, a
-            <span class="text-highlight">product designer</span> with a passion for crafting human experiences.
+            <span class="text-highlight">digital product designer</span> with a passion for crafting experiences.
           </h1>
         </div>
     </header>
