--- a/voiceops-app/index.html
+++ b/voiceops-app/index.html
@@ -50,7 +50,7 @@
   <div class="wrapper work">
     <div class="container">
       <h2>My solo product designer adventure</h2>
-      <p>Being the only designer in a very small startup and working on their flagship product came with many freedoms, challenges, and responsibilities throughout the many sprints I was involved with. Some weeks I would wear many hats, starting with lean research all the way through to visual design and style implementation in React.js with SASS. Other weeks, the problems we were solving only called for a specific part of the design process, like doing visual tweaks, gaining insight by watching FullStory recorded sessions, or low-fi ideation on potential future features. I took a very lean, fail fast approach in creating new features and improvements for VoiceOps, as many of our features were exploratory and needed quick validation before we decided to go all-in on that particular solution.</p>
+      <p>Being the only designer in a very small startup and working on their flagship product came with many freedoms, challenges, and responsibilities throughout the many sprints I was involved with. Some weeks I would wear many hats, starting with lean research all the way through to visual design and style implementation in React.js with SASS. Other weeks, the problems we were solving only called for a specific part of the design process, like doing visual tweaks, gaining insight by watching FullStory recorded sessions, or low-fi ideation on potential solutions. I took a very lean, fail fast approach in creating new features and improvements for VoiceOps, as many of our ideas were exploratory and needed quick validation before we decided to go all-in on a particular solution.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -62,7 +62,7 @@
   <div class="wrapper work">
     <div class="container">
       <h2>Smooth sign in experience</h2>
-      <p>Being that many of our users were going into the app for a specific reason and didn't really need/want an account, we opted to build a password-less sign in experience. This new default would only require the user to type their email, and be able to sign in from a link rather than set up an account.</p>
+      <p>Many of our users were going into the app for a specific reason and a short amount of time (like replying to a comment, or checking a quick stat) and didn't really need/want an account, we opted to build a password-less sign in experience. This new default would only require the user to type their email, and be able to sign in from a link rather than set up an account.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -72,8 +72,8 @@
   </div>
   <div class="wrapper work">
     <div class="container">
-      <h2>Shifting the focus to encourage good sales behavior</h2>
-      <p>At it's core, VoiceOps' app provides actionable insight to sales managers, allowing them to coach their reps better. When I was brought onboard, the app was already doing a great job of providing data about sales calls that managers want to see. However, there wasn't a particular focus on one of the many valuable pieces of information about calls that really drove improvement in coaching and sales behaviors. We decided that the app should emphasize whether behaviors are happening or not on calls. This ideology of choose rep > choose behavior > see calls aligned well with manager's mental model of how they thought about coaching a rep. Shifting our apps focus to behaviors significantly helped managers focus more on what they want to coach on and go through clear task flows in the app.</p>
+      <h2>Setting the app's focus to encourage good sales behavior</h2>
+      <p>At it's core, VoiceOps' app provides actionable insight to sales managers, allowing them to coach their reps better. When I was brought onboard, the app was already doing a great job of providing data about sales calls that managers want to see. However, there wasn't any particular focus on one of the many valuable pieces of information about calls that really drove improvement in coaching and sales behaviors. We decided that the app should emphasize whether certain behaviors are happening or not on calls. I identified the primary use case for this as: choose rep > choose behavior > see calls. This aligned with our user's mental model of how they approached coaching a rep. Shifting our apps focus to behaviors significantly helped managers hone in on what they want to coach on and go through clear task flows in the app.</p>
     </div>
   </div>
   <div class="wrapper work">
@@ -85,13 +85,12 @@
   <div class="wrapper work">
     <div class="container">
       <h2>Better coaching tools</h2>
-      <p>While continually gaining insight, it became more and more clear that managers didn't currently have an organized and simple way to coach reps. Depending on the company, managers had different styles of coaching and there didn't seem to be any gold standard. To solve this, we created a coaching tool that aimed to help managers simplify and organize their 1-1 coaching sessions with reps. The coaching form was a somewhat flexible form that could be accessed anywhere in the app, and allow managers to write notes, score, and keep lists of action items in preparation for their in-person coaching sessions with reps. After a few iterations and lots of feedback, our coaching form was starting to become the best way a manager could prepare and organize their sessions. This one simple tool had a domino effect on improving coaching and sales behavior. </p>
+      <p>While continually gaining insight, it became more and more clear that managers didn't currently have an organized and simple way to coach reps. Depending on the style of their organization, sales managers had different ways of coaching and there didn't seem to be any gold standard. To solve this, we created a coaching tool that aimed to help managers organize and prepare for their 1-1 coaching sessions with reps. The coaching form was a somewhat flexible form that could be accessed anywhere in the app, and allow managers to write notes, score, and keep lists of action items in preparation for their in-person coaching sessions with reps. After a few iterations and lots of feedback, our coaching form was starting to become the best way a manager could prepare and organize their sessions. This one simple tool had a domino effect on improving coaching and sales behavior. </p>
     </div>
   </div>
   <div class="wrapper work">
     <div class="container">
-      <img class="drop-style" src="../img/voiceopssite-testimonials.jpg" alt="voiceops steps"/>
-      <p class="img-caption">Testimonial section and footer</p>
+      <img class="drop-style" src="../img/voiceopsapp-coaching.jpg" alt="voiceops steps"/>
     </div>
   </div>
 
@@ -100,8 +99,8 @@
   <div class="wrapper work">
     <div class="container">
       <div class="button next">
-        <a href="../interactive_venue_maps">
-          <p>Next: Venue Maps<i class="material-icons">keyboard_arrow_right</i></p>
+        <a href="../voiceops">
+          <p>Next: VoiceOps.com<i class="material-icons">keyboard_arrow_right</i></p>
         </a>
       </div>
       <div class="button-secondary previous">
