--- a/voiceops/index.html
+++ b/voiceops/index.html
@@ -101,8 +101,8 @@
         </a>
       </div>
       <div class="button-secondary previous">
-        <a href="../">
-          <p>Back to Home</p>
+        <a href="/voiceops-app/">
+          <p>Previous: VoiceOps App</p>
         </a>
       </div>
     </div>
