--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header id="uno" class="wrapper intro">
         <div class="container">
           <h1> Hi, I'm Graham Grimaldi, a
-            <span class="text-highlight">digital product designer</span> with a passion for crafting experiences.
+            <span class="text-highlight">product designer</span> with a passion for crafting experiences.
           </h1>
         </div>
     </header>
@@ -163,7 +163,7 @@
     </div>
   </div>
   <!--Mobile Sidebar-->
-  <div class="sidebar sidebar-hidden">
+  <nav class="sidebar">
     <ul class="sidebar_nav">
       <li>
         <a id="worklink" class="sidebar-link" href="#work">Recent Work</a>
@@ -187,7 +187,7 @@
       </li>
     </ul>
     <a class="button" href="../img/grahamgrimaldi-resume.pdf" download><i class="material-icons">cloud_download</i> Get My Resume</a>
-  </div>
+  </nav>
 
   <!--Footer-->
   <footer id="footer" class="wrapper footer">
@@ -211,5 +211,24 @@
     </div>
   </footer>
 </body>
-<script src="js/main.min.js" type="text/javascript"></script>
+<!-- <script src="js/main.min.js" type="text/javascript"></script> -->
+<script>
+(function() {
+
+  var hamburger = {
+    burger: document.querySelector('.burger'),
+    sidebar: document.querySelector('.sidebar'),
+    navlinks: document.querySelector('.sidebar_nav'),
+
+    doToggle: function(e) {
+      this.burger.classList.toggle('cooked');
+      this.sidebar.classList.toggle('sidebar-expanded');
+    }
+  };
+
+  hamburger.burger.addEventListener('click', function(e) { hamburger.doToggle(e); });
+  hamburger.navlinks.addEventListener('click', function(e) { hamburger.doToggle(e); });
+
+}());
+</script>
 </html>
