fixed top nav anchors, removed jQuery

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </a>
           </div>
           <div class="col-flex-2 nav-link-container">
-            <a id="worklink" class="nav-link" href="">Recent Work</a>
-            <a id="aboutlink" class="nav-link" href="">About Me</a>
-            <a id="contactlink" class="nav-link" href="">Hire Me</a>
+            <a id="worklink" class="nav-link" href="#work">Recent Work</a>
+            <a id="aboutlink" class="nav-link" href="#about">About Me</a>
+            <a id="contactlink" class="nav-link" href="#contact">Hire Me</a>
           </div>
         </div>
       </div>
